php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #28508 hypot is broken
Submitted: 2004-05-24 18:27 UTC Modified: 2004-05-24 19:03 UTC
From: techtonik at tut dot by Assigned:
Status: Closed Package: Math related
PHP Version: 4.3.6 OS: Windows 2000
Private report: No CVE-ID: None
 [2004-05-24 18:27 UTC] techtonik at tut dot by
Description:
------------
hypot() support seems to be broken on windows. Can anybody confirm?

Reproduce code:
---------------
<?php

$x = hypot(3, 4);
var_dump($x);

?>

Expected result:
----------------
5

Actual result:
--------------
NULL

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-05-24 19:03 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

The underlying C function is not available in win32. 
Technically (fixed in CVS) the function shouldn't have been 
available in this case, but it was, since it was not 
supported it ended up returning NULL. 
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 21:00:01 2026 UTC