Fixed bug #28508 (Do not make hypot() available if not supported by libc).