ext/standard/basic_functions.c
@@ -17,7 +17,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: basic_functions.c,v 1.666 2004/05/12 10:17:11 helly Exp $ */
+/* $Id: basic_functions.c,v 1.667 2004/05/24 17:02:12 iliaa Exp $ */
 
 #include "php.h"
 #include "php_streams.h"
@@ -401,7 +401,9 @@ function_entry basic_functions[] = {
 	PHP_FE(log,																NULL)
 	PHP_FE(log10,															NULL)
 	PHP_FE(sqrt,															NULL)
+#ifdef HAVE_HYPOT
 	PHP_FE(hypot,															NULL)
+#endif	
 	PHP_FE(deg2rad,															NULL)
 	PHP_FE(rad2deg,															NULL)
 	PHP_FE(bindec,															NULL)
